# netbox-manager

./: .gitignore  .zuul.yaml  CHANGELOG.md  CLAUDE.md  Giltfile.yaml  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  requirements.yml  settings.toml.sample  test-requirements.txt
example/devicetype-library/device-types/Cisco/: manager.yml  node.yml
example/resources/: 000-base.yml  000-init.yml  200-rack-1000.yml  300-connections-1000.yml
netbox_connection_manager/: main.py
netbox_manager/: cli.py  config.py  dtl.py  main.py  playbook.py  requirements.yml  resources.py  settings.toml.sample  utils.py
playbooks/: pre-e2e.yml  pre.yml  test-e2e.yml  test-unit.yml
tests/: conftest.py
tests/e2e/: README.md  deploy_netbox.sh  expected.py  run.sh  verify.py
tests/unit/netbox_manager/: test_autoconf_collect.py  test_autoconf_dispatch.py  test_autoconf_helpers.py  test_cli_commands.py  test_cluster_loopbacks.py  test_connection_helpers.py  test_discover_resources.py  test_dtl_devicetypes.py  test_dtl_netbox.py  test_dtl_repo.py  test_export_archive.py  test_filesystem_helpers.py  test_handle_file.py  test_helpers.py  test_import_archive.py  test_interface_label_generation.py  test_interface_labels.py  test_loopback_gate.py  test_loopback_generation.py  test_playbook_rendering.py  test_portchannel_tasks.py  test_process_device_and_module_types.py  test_segment_interface_label.py  test_smoke.py  test_task_builders.py  test_task_filters.py  test_validate_prefixes.py  test_validate_vrf.py  test_write_autoconf_files.py
