[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-manager"
description = "NetBox manager"
authors = [
  { name = "OSISM community", email = "info@osism.tech" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
requires-python = ">=3.8"
dynamic = ["dependencies", "version"]

[tool.ruff]
line-length = 200
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by line-length)
    "B005",   # strip with multi-char (intentional for stripping colons)
    "B008",   # function call in default argument (used by typer)
    "B904",   # raise from in except (typer.Exit() is intentional)
    "SIM102", # nested if statements (sometimes more readable)
    "SIM108", # ternary operator (sometimes less readable)
    "SIM115", # context manager for opening files (tricky with requests)
    "SIM210", # True if ... else False (preserved from original code)
]

[tool.ruff.lint.isort]
known-first-party = ["netbox_manager"]

[tool.mypy]
exclude = ["doc"]

[tool.setuptools]
packages = ["netbox_manager"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}"
dirty_template = "{tag}"

[tool.setuptools.package-data]
netbox_manager = ["requirements.yml", "settings.toml.sample"]

[project.scripts]
netbox-manager = "netbox_manager.main:main"

[project.urls]
"Homepage" = "https://github.com/osism/netbox-manager"
"Bug Tracker" = "https://github.com/osism/netbox-manager/issues"
