[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-manager"
description = "NetBox manager"
authors = [
  { name = "OSISM community", email = "info@osism.tech" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
requires-python = ">=3.8"
dynamic = ["dependencies", "version"]

[tool.mypy]
exclude = ["doc"]

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["no-untyped-def"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"

[tool.setuptools]
packages = ["netbox_manager"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools-git-versioning]
enabled = true
# Untagged builds (e.g. CI/E2E on a branch) must NOT collapse to the bare
# release tag: otherwise a build N commits past v0.20260614.0 reports the
# exact PyPI release version, making a local checkout indistinguishable from
# the published package. Encode the commit distance + short SHA so a dev
# build reads e.g. 0.20260614.0.post21+git.b9a392c. Tagged release builds are
# unaffected (they use the bare tag), so PyPI artifacts stay clean.
dev_template = "{tag}.post{ccount}+git.{sha}"
dirty_template = "{tag}.post{ccount}+git.{sha}.dirty"

[tool.setuptools.package-data]
netbox_manager = ["requirements.yml", "settings.toml.sample"]

[project.scripts]
netbox-manager = "netbox_manager.main:main"

[project.urls]
"Homepage" = "https://github.com/osism/netbox-manager"
"Bug Tracker" = "https://github.com/osism/netbox-manager/issues"
